# od-info

./: .gitignore  README.md  flask_app.py  od.bat  pyproject.toml  requirements.txt  setup.py
calculators/: military.py
domain/: models.py
facade/: odinfo.py  user.py
opsdata/: ops.py  updater.py
ref-data/races/: gnome.yml
templates/: military.html
